fix(app): overflow on body not used if on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 :root {
     background-color: #242424;
     color: white;
+}
 
+#root {
     overflow: hidden;
 }
 
